[package]
name = "event-ingest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
maxminddb = "0.24"
config = { version = "0.14", features = ["yaml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"
sentry = { version = "0.35", features = ["tracing"] }
dashmap = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
actix-rt = "2"
tempfile = "3"
